--- a/src/dayThree/GUI/gui.fxml
+++ b/src/dayThree/GUI/gui.fxml
@@ -9,10 +9,10 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dayThree.GUI.labFourController">
    <children>
-      <Slider fx:id="slider" blockIncrement="1.0" layoutX="14.0" layoutY="40.0" majorTickUnit="5.0" max="20.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
+      <Slider fx:id="slider" blockIncrement="1.0" layoutX="14.0" layoutY="40.0" majorTickUnit="5.0" max="14.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
       <Button fx:id="startButton" layoutX="50.0" layoutY="92.0" mnemonicParsing="false" onAction="#firstDisplay" text="Enter" />
       <Label fx:id="instructions" layoutX="27.0" layoutY="14.0" text="Enter the desired width" />
-      <Label fx:id="display" layoutX="13.0" layoutY="123.0" prefHeight="245.0" prefWidth="215.0">
+      <Label fx:id="display" layoutX="13.0" layoutY="123.0" prefHeight="241.0" prefWidth="215.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
@@ -20,7 +20,8 @@
       <Label fx:id="results" layoutX="13.0" layoutY="368.0" prefHeight="17.0" prefWidth="179.0" />
       <Label layoutX="414.0" layoutY="22.0" text="Enter the desired precision" />
       <TextField fx:id="txtField" layoutX="414.0" layoutY="43.0" />
-      <Button fx:id="precisionButton" layoutX="458.0" layoutY="77.0" mnemonicParsing="false" onAction="#estimateCalc" text="Enter" />
-      <Label fx:id="precisionResult" layoutX="422.0" layoutY="131.0" prefHeight="18.0" prefWidth="136.0" text="Label" />
+      <Button fx:id="precisionButton" layoutX="458.0" layoutY="77.0" mnemonicParsing="false" onAction="#secondDisplay" text="Enter" />
+      <Label fx:id="precisionResult" layoutX="422.0" layoutY="158.0" prefHeight="83.0" prefWidth="136.0" wrapText="true" />
+      <Label fx:id="progress" layoutX="422.0" layoutY="114.0" prefHeight="18.0" prefWidth="136.0" />
    </children>
 </AnchorPane>
